--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -13,7 +13,7 @@ name: Build OpenWrt
 on:
   push:
     branches: 
-      - master
+      - main
 
 env:
   REPO_URL: https://github.com/openwrt/openwrt
