--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -95,7 +95,7 @@ jobs:
       id: compile
       run: |
         cd openwrt
-        echo -e "Only 1 thread compile"
+        echo -e "Only 1 thread compile........i do it !"
         make -j1 V=s
         echo "{status}={success}" >>$GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
