--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -133,6 +133,11 @@ jobs:
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "STATUS=success" >> $GITHUB_OUTPUT
 
+    - name: Remove artifacts
+      uses: c-hive/gha-remove-artifacts@v1.2.0
+      with:
+        age: '10 days'
+
     - name: Upload firmware directory
       uses: actions/upload-artifact@main
       #if: steps.organize.outputs.STATUS == 'success' && !cancelled()
