--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -32,6 +32,7 @@ env:
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
+  REMOVE_ARTIFACTS: false
   TZ: Asia/Shanghai
 
 jobs:
@@ -134,7 +135,9 @@ jobs:
         echo "STATUS=success" >> $GITHUB_OUTPUT
 
     - name: Remove artifacts
+      id: removeart
       uses: c-hive/gha-remove-artifacts@v1.3.0
+      if: env.REMOVE_ARTIFACTS == 'true' && !cancelled()
       with:
         age: '5 day'
         skip-recent: 2
