--- a/.github/workflows/remove-old-artifacts.yml
+++ b/.github/workflows/remove-old-artifacts.yml
@@ -4,9 +4,9 @@ on:
     push:
         branches: 
             - main 
-    schedule:
+    #schedule:
     # Every day at 1am
-    - cron: '0 1 * * *'
+    #- cron: '0 1 * * *'
 
 jobs:
   remove-old-artifacts:
