add helloworld package

--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -85,8 +85,7 @@ jobs:
     - name: Reupdate feeds 
       run: | 
         cd openwrt 
-        ./scripts/feeds update -a    
-        ./scripts/feeds install -a
+        ./scripts/feeds update -a && ./scripts/feeds install -a
 
     - name: Load custom configuration
       run: |
